--- a/feature/albums/src/main/res/values/strings.xml
+++ b/feature/albums/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="albums_feed_error_btn_retry">Retry</string>
     <string name="albums_feed_topbar_title">Top 100 Albums</string>
+    <string name="albums_feed_error_empty_message">No albums found</string>"
+    <string name="albums_feed_error_general_message">Something went wrong</string>"
 </resources>
